@@ -201,8 +201,7 @@
       the whole guile/perl extension language thing, and is dealing
       with configuration and configurability.</dd>
 
-      <dt><a href="mailto:peticola@cs.ucdavis.edu">Dave
-      Peticolas</a></dt>
+      <dt><a href="mailto:dave@krondo.com">Dave Peticolas</a></dt>
 
       <dd>hacks obsessively on GnuCash. But he can stop anytime he
       wants to. Really.</dd>
@@ -325,6 +324,10 @@
       Freese</a></dt>
 
       <dd>for leap-year fix</dd>
+
+      <dt><a href="mailto:jgoerzen@complete.org">John Goerzen</a></dt>
+
+      <dd>file i/o fix for 64-bit architectures</dd>
 
       <dt><a href="mailto:grib@billgribble.com">Bill
       Gribble</a></dt>
