@@ -245,7 +245,7 @@ configuration et&nbsp; configurabilit&eacute;.</dd>
 le portage en Qt/KDE
 <br>&nbsp;
 <dt>
-<a href="mailto:peticola@cs.ucdavis.edu">Dave Peticolas</a></dt>
+<a href="mailto:dave@krondo.com">Dave Peticolas</a></dt>
 
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; travaille d'une
 mani&egrave;re obs&eacute;dante sur GnuCash. Mais il peut s'arr&ecirc;ter
