@@ -1,6 +1,4 @@
 Makefile
-tmp
-obj
 gnucash.engine.i
 gnucash-engine-perl5_wrap.c
 gnucash.engine_wrap.doc
